deploy: c78c56a829aab537c563ae30f51afa9bff1bec8d

--- a/sles4sap/sap_deployment_automation_framework/deployment.html
+++ b/sles4sap/sap_deployment_automation_framework/deployment.html
@@ -31,9 +31,12 @@
       <li><a href="#sdaf_cleanup">sdaf_cleanup</a></li>
       <li><a href="#sdaf_execute_playbook">sdaf_execute_playbook</a></li>
       <li><a href="#sdaf_ansible_verbosity_level">sdaf_ansible_verbosity_level</a></li>
+      <li><a href="#get_sdaf_instance_id">get_sdaf_instance_id</a></li>
       <li><a href="#ansible_show_status">ansible_show_status</a></li>
       <li><a href="#ansible_execute_command">ansible_execute_command</a></li>
       <li><a href="#playbook_settings">playbook_settings</a></li>
+      <li><a href="#sdaf_register_byos">sdaf_register_byos</a></li>
+      <li><a href="#sdaf_deployment_reused">sdaf_deployment_reused</a></li>
     </ul>
   </li>
 </ul><h1>lib/sles4sap/sap_deployment_automation_framework/deployment.pm</h1>
@@ -371,6 +374,19 @@ tee - writes output also into the log file</code></pre>
 </li>
 </ul>
 
+<h2 id="get_sdaf_instance_id">get_sdaf_instance_id</h2>
+
+<pre><code>get_sdaf_instance_id(pattern=&gt;[&#39;SCS&#39;, &#39;ERS&#39;, &#39;PAS&#39;]);</code></pre>
+
+<p>Get instance id number from SAP_SYSTEM.tfvar.</p>
+
+<ul>
+
+<li><p><b>pattern</b>: SDAF SAP Central Services pattern</p>
+
+</li>
+</ul>
+
 <h2 id="ansible_show_status">ansible_show_status</h2>
 
 <pre><code>ansible_show_status(scenarios=&gt;[&#39;db_install&#39;, &#39;db_ha&#39;] sdaf_config_root_dir=&gt;&#39;/some/path&#39; [, sap_sid=&gt;&#39;CAT&#39;]);</code></pre>
@@ -414,6 +430,9 @@ tee - writes output also into the log file</code></pre>
 <li><p><b>verbose</b>: verbose ansible output</p>
 
 </li>
+<li><p><b>proceed_on_failure</b>: proceed on failure setting</p>
+
+</li>
 </ul>
 
 <h2 id="playbook_settings">playbook_settings</h2>
@@ -425,6 +444,38 @@ tee - writes output also into the log file</code></pre>
 <ul>
 
 <li><p><b>components</b>: <b>ARRAYREF</b> of components that should be installed</p>
+
+</li>
+</ul>
+
+<h2 id="sdaf_register_byos">sdaf_register_byos</h2>
+
+<pre><code>sdaf_register_byos(sdaf_config_root_dir=&gt;&#39;/stairway/to_heaven&#39;, scc_reg_code=&gt;&#39;CODE-XYZ&#39;, sap_sid=&#39;PRD&#39;);</code></pre>
+
+<p>Performs SCC registration on BYOS image using <b>registercloudguest</b> method.</p>
+
+<ul>
+
+<li><p><b>sdaf_config_root_dir</b>: SDAF root configuration directory</p>
+
+</li>
+<li><p><b>scc_reg_code</b>: SCC registration code</p>
+
+</li>
+<li><p><b>sap_sid</b>: SAP system ID</p>
+
+</li>
+</ul>
+
+<h2 id="sdaf_deployment_reused">sdaf_deployment_reused</h2>
+
+<pre><code>sdaf_deployment_reused(quiet=&gt;&#39;BeQuiet!&#39;);</code></pre>
+
+<p>If an existing deployment is being reused according to openQA setting `SDAF_DEPLOYMENT_ID`, function will display `record_info` message with details and returns deployment ID. Otherwise returns nothing/false. Argument <b>quiet</b> can be used to disable `record_info` message.</p>
+
+<ul>
+
+<li><p><b>quiet</b>: Hide &#39;record_info&#39; message. Default: undef</p>
 
 </li>
 </ul>
